SERVER-9501: initial sync exception: 10083 Changed validation to allow explicit creation of size 0 collections. Should be backported to 2.4.X

Signed-off-by: Matt Kangas <matt.kangas@10gen.com>